fix scroll cars on mobile

--- a/src/components/OrderPage/LocationStep/LocationStep.scss
+++ b/src/components/OrderPage/LocationStep/LocationStep.scss
@@ -49,9 +49,7 @@
     &__indicators {
       height: 19px!important;
     }
-    &__indicator-separator {
-      display: none!important;
-    }
+
     &__dropdown-indicator {
       display: none!important;
     }
